second day changes

--- a/mern-stack-crud/src/App.css
+++ b/mern-stack-crud/src/App.css
@@ -11,3 +11,7 @@
 .expCls{
   align-content: center;
 }
+
+::-webkit-input-placeholder { text-align:right; }
+/* mozilla solution */
+input:-moz-placeholder { text-align:right; }
